--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/sound": "^2.0.1",
     "typed.js": "^2.0.132",
     "vue": "^3.2.45",
     "vue-typed-js": "^0.1.2",
